src/objects/Guarantee__c.object
<CustomObject>
    <fields>
        <fullName>address_town_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordenante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adjusted_guarantee_amount__c</fullName>
        <label>Valor a nuevo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amount_real__c</fullName>
        <label>Valor de realización</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>asset_type__c</fullName>
        <label>Tipo de bien</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>CASA HABITACION</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>LOCAL COMERCIAL</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>LOCAL INDUSTRIAL</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>TERRENO</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>OTROS (Embarcaciones)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blocked_amount__c</fullName>
        <label>Monto retenido</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bco corresponsal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_assessed_amount__c</fullName>
        <label>Valor de tasación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>customer_account_id__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Garantías</relationshipLabel>
        <relationshipName>Garantias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>expiration_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha vcto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>financed_asset_address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dirección del inmueble</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>general_deposit_warehouse_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposito</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guarantee_account_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de cuenta</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>guarantee_class__c</fullName>
        <label>Clase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>GENERICA</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>ESPECIFICA.</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>CONTICASA ESPECIFICA.</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>M.E.F.</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>EMPLEADOS CONTICASA</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>CONTICASA GENERICA.</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>MIVIV.ESP</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>MIVIV.GEN</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>EMP.MIVIV</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>guarantee_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de la garantía</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guarantee_letter_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>N° carta SBLC</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>guarantee_pledge__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>guarantee_release_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de alta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>guarantee_status_type__c</fullName>
        <label>Estado de la garantía</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>TRAMITE</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>MINUTA</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>MIN. BLOQ</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>ESCRITURA</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>ESC. BLOQ</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>FORMALIZ.</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>LIBERADA</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>DEVUELTA</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>DESESTIMADA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>guarantee_subtype__c</fullName>
        <label>Subtipo de garantía</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>guarantee_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H111-01</fullName>
                    <label>INMUEBLE</label>
                </value>
                <value>
                    <fullName>H111-02</fullName>
                    <label>NAVAL</label>
                </value>
                <value>
                    <fullName>H111-03</fullName>
                    <label>AEREA</label>
                </value>
                <value>
                    <fullName>H111-04</fullName>
                    <label>TIT. C.HIPO</label>
                </value>
                <value>
                    <fullName>D123-01</fullName>
                    <label>CTA.CTE</label>
                </value>
                <value>
                    <fullName>D123-02</fullName>
                    <label>AHORRO</label>
                </value>
                <value>
                    <fullName>A311-01</fullName>
                    <label>MISMO DOCUM.</label>
                </value>
                <value>
                    <fullName>A311-02</fullName>
                    <label>DOCUM. APARTE</label>
                </value>
                <value>
                    <fullName>A217-1</fullName>
                    <label>CREDITOS</label>
                </value>
                <value>
                    <fullName>A217-2</fullName>
                    <label>LOGISTICA</label>
                </value>
                <value>
                    <fullName>A217-3</fullName>
                    <label>EXTERIOR</label>
                </value>
                <value>
                    <fullName>A217-456</fullName>
                    <label>GTIAS FOGEM</label>
                </value>
                <value>
                    <fullName>P133-01</fullName>
                    <label>Almacenero</label>
                </value>
                <value>
                    <fullName>P133-02</fullName>
                    <label>Aduanero</label>
                </value>
                <value>
                    <fullName>P131-06</fullName>
                    <label>acciones</label>
                </value>
                <value>
                    <fullName>P131-07</fullName>
                    <label>Otros valores</label>
                </value>
                <value>
                    <fullName>P131-08</fullName>
                    <label>fideicomiso</label>
                </value>
                <value>
                    <fullName>P131-09</fullName>
                    <label>fiduciario.</label>
                </value>
                <value>
                    <fullName>D129-04</fullName>
                    <label>SUPER REN</label>
                </value>
                <value>
                    <fullName>D129-09</fullName>
                    <label>FMUT.COLAT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>guarantee_type__c</fullName>
        <label>Tipo de garantía</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>111</fullName>
                    <label>Garantías Hipotecas</label>
                </value>
                <value>
                    <fullName>122</fullName>
                    <label>Garantía Deposito a plazos</label>
                </value>
                <value>
                    <fullName>123</fullName>
                    <label>Cuentas en Garantía</label>
                </value>
                <value>
                    <fullName>129</fullName>
                    <label>Fondos Mutuos</label>
                </value>
                <value>
                    <fullName>311</fullName>
                    <label>Garantías Fianza Solidaria</label>
                </value>
                <value>
                    <fullName>218</fullName>
                    <label>Garantías Stand by Letter of Credit</label>
                </value>
                <value>
                    <fullName>221</fullName>
                    <label>Garantías Letter of Conform</label>
                </value>
                <value>
                    <fullName>217</fullName>
                    <label>Garantías Fianza Bancaria</label>
                </value>
                <value>
                    <fullName>133</fullName>
                    <label>Garantías Warrants</label>
                </value>
                <value>
                    <fullName>143</fullName>
                    <label>Garantías Letras en Garantía</label>
                </value>
                <value>
                    <fullName>301</fullName>
                    <label>Garantías Prenda Industrial</label>
                </value>
                <value>
                    <fullName>302</fullName>
                    <label>Garantías Prenda Mercantil</label>
                </value>
                <value>
                    <fullName>131</fullName>
                    <label>Garantías Prenda Valores</label>
                </value>
                <value>
                    <fullName>303</fullName>
                    <label>Garantías Prenda Minera</label>
                </value>
                <value>
                    <fullName>304</fullName>
                    <label>Garantías Prenda Transporte</label>
                </value>
                <value>
                    <fullName>136</fullName>
                    <label>Garantías Prenda Vehicular</label>
                </value>
                <value>
                    <fullName>305</fullName>
                    <label>Garantías Prenda Agrícola</label>
                </value>
                <value>
                    <fullName>310</fullName>
                    <label>Garantías Carta de Compromiso</label>
                </value>
                <value>
                    <fullName>130</fullName>
                    <label>Garantías Acciones y Bonos</label>
                </value>
                <value>
                    <fullName>220</fullName>
                    <label>Contragarantía</label>
                </value>
                <value>
                    <fullName>315</fullName>
                    <label>Sin garantía</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>guaranteed_amount__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>guarantor_account_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOI</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Garantías (DOI)</relationshipLabel>
        <relationshipName>Aval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>guarantor_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre fiador</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>issuing_entity_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bco emisor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_assessed_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Tasación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>other_information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Observaciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_start_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <description>Identificador de registro de garantía</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Id externo</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>warrant_certificate_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>N° de certificado</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>withholding_id__c</fullName>
        <label>Número de retención</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Garantía</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G-{0000000}</displayFormat>
        <label>Número de garantía</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantías</pluralLabel>
    <recordTypes>
        <fullName>Avales</fullName>
        <active>true</active>
        <label>Avales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Depositos</fullName>
        <active>true</active>
        <label>Depositos</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hipotecas</fullName>
        <active>true</active>
        <label>Hipotecas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Otros</fullName>
        <active>true</active>
        <label>Otros</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prendas</fullName>
        <active>true</active>
        <label>Prendas</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>